# caesar

./: .gitignore  CMakeLists.txt  README  README.txt  compile.sh
src/: CMakeLists.txt  algebra.f90  bands.f90  caesar  caesar.f90  calculate_symmetry.f90  calculate_symmetry_helper.f90  constants.f90  dft_input_file.f90  dft_output_file.f90  displacement_patterns.f90  err_gfortran.f90  file.f90  gfortran_specific.f90  kpoints.f90  linear_algebra.f90  moller_plesset.f90  process.f90  qe_output_file.f90  rand_no_gen.f90  rundft.f90  string.f90  structure.f90  structure_to_dft.f90  supercell.f90  supercells.f90  thingy  utils.f90  version.f90
src/anharmonic/: CMakeLists.txt  anharmonic.f90  anharmonic_submodule.f90  basis_function.f90  basis_functions.f90  calculate_anharmonic.f90  calculate_anharmonic_observables.f90  calculate_anharmonic_observables_submodule.f90  calculate_anharmonic_observables_test.pf  calculate_potential.f90  calculate_potential_submodule.f90  calculate_potential_test.pf  calculate_states.f90  calculate_vscf_potential.f90  coupled_modes.f90  coupled_subspaces.f90  coupling.f90  cubic_grid.f90  degeneracy.f90  degenerate_symmetry.f90  displacements_and_forces.f90  effective_frequency.f90  eigenstates.f90  generate_basis.f90  generate_subspace_potentials.f90  generate_subspace_potentials_submodule.f90  generate_subspace_potentials_test.pf  grid_types.f90  harmonic_states.f90  initial_frequencies.f90  interpolation.f90  interpolation_submodule.f90  interpolation_test.pf  map_anharmonic_modes.f90  map_modes.f90  map_modes_submodule.f90  map_modes_test.pf  map_potential.f90  map_potential_submodule.f90  map_potential_test.pf  (+56 more)
src/castep/: CMakeLists.txt  castep.f90  castep_output_file.f90  converge_cutoff_and_kpoints.f90  converge_harmonic_frequencies.f90  plot_cutoff_and_kpoints.f90  plot_harmonic_convergence.f90
src/cmake/: cmake_utils.cmake
src/common/: CMakeLists.txt  atom.f90  bands.f90  basic_symmetry.f90  common.f90  generate_qpoints.f90  input_file.f90  normal_mode.f90  normal_mode_symmetry.f90  output_file.f90  physical_constants.f90  qpoints.f90  quip_dummy.f90  quip_wrapper.f90  structure.f90  symmetry.f90
src/coupled/: CMakeLists.txt  bo_mappingforcesCoupled.f90  coupled_atomic_units.f90  positions2.f90  scf.f90  spline2.f90  vscfCoupled.f90
src/dft/: CMakeLists.txt  castep_output_file.f90  castep_output_file_submodule.f90  converge_cutoff_and_kpoints.f90  converge_cutoff_and_kpoints_submodule.f90  converge_harmonic_frequencies.f90  converge_harmonic_frequencies_submodule.f90  dft.f90  dft_submodule.f90  plot_cutoff_and_kpoints.f90  plot_cutoff_and_kpoints_submodule.f90  plot_harmonic_convergence.f90  plot_harmonic_convergence_submodule.f90
src/harmonic/: CMakeLists.txt  calculate_dos_and_dispersion.f90  calculate_dynamical_matrices.f90  calculate_force_constants.f90  calculate_harmonic.f90  calculate_harmonic_observables.f90  calculate_harmonic_observables_submodule.f90  calculate_harmonic_observables_test.pf  calculate_modes.f90  calculate_normal_modes.f90  calculate_normal_modes_submodule.f90  calculate_normal_modes_test.pf  calculate_symmetry.sh  calculate_symmetry_group.f90  clear_all.sh  combine_forces.f90  compare_kpoints.f90  construct_finite_displacement.f90  construct_matrix_force_cnsts.f90  construct_supercell.f90  construct_supercell_hessian.f90  construct_supercell_hessian_submodule.f90  construct_supercell_hessian_test.pf  converge_harmonic_qpoints.f90  converge_harmonic_qpoints_submodule.f90  converge_harmonic_qpoints_test.pf  converge_qpoint_grid.f90  converge_qpoint_grid_submodule.f90  converge_qpoint_grid_test.pf  convert_forces_from_Rybohr_to_eVang.f90  convert_harmonic.sh  dyn_mats.sh  dynamical_matrix.f90  equilibrium_frac.f90  fetch_forces.f90  fetch_forces_castep.sh  fetch_forces_qe.f90  fetch_forces_qe.sh  force_constants.f90  fourier_interpolation.f90  (+59 more)
src/old/: CMakeLists.txt
src/python/: CMakeLists.txt  plot_anharmonic_modes.py  plot_cutoff_and_kpoints.py  plot_dos_and_dispersion.py  plot_effective_frequencies.py  plot_harmonic_convergence.py  plot_harmonic_qpoint_convergence.py  plot_modes.py  plot_normal_modes.py  plot_potential_map.py  plot_thermodynamic_variables.py  plot_vscf_convergence.py  plot_vscf_modes.py  plot_vscf_states.py  utils.py
src/quadratic/: CMakeLists.txt  anharmonic.f90  anharmonic.sh  band_folding.f90  bs_quadratic.f90  bs_quadratic.sh  calculate_anharmonic.f90  calculate_anharmonic_correction.f90  calculate_bs.f90  calculate_gap.f90  convert_quadratic.sh  eigenval_castep_to_bands.sh  eigenval_vasp_to_bands.sh  generate_amplitudes.f90  generate_quadratic_configurations.f90  generate_sc_path.f90  mapping.f90  quadratic_spline.f90  run_quadratic.f90  setup_quadratic.f90  setup_quadratic.sh  tcm_cleanup_anharmonic.sh  tcm_cleanup_bs.sh  tcm_cluster_run_quadratic.sh  vscf_1d.f90
src/testing/: CMakeLists.txt  atom_mapping.f90  atom_mapping_submodule.f90  calculate_harmonic_test.f90  check_counter.f90  check_counter_submodule.f90  displacement_patterns.f90  displacement_patterns_submodule.f90  linear_algebra_test.f90  linear_algebra_test_submodule.f90  lte_harmonic_test.f90  setup_harmonic_test.f90  structure_test.f90  structure_test_submodule.f90  test.F90  test.f90  test_copy_harmonic.f90  test_copy_quadratic.f90  test_lte.f90  test_run_script.sh  test_submodule.f90  testing.f90  testing_submodule.f90  update_basis_functions.f90  update_basis_functions_submodule.f90
src/utils/: CMakeLists.txt  algebra.f90  atom.f90  bands.f90  caesar_modes.f90  calculate_symmetry.f90  cmake_include_guard  cmake_include_guard.cmake  compiler_specific_default.f90  compiler_specific_gfortran.f90  constants.f90  dft_input_file.f90  dft_output_file.f90  dictionary.f90  displacement_patterns.f90  eigenstuff.f90  error.f90  file.f90  fraction.f90  fraction_algebra.f90  gfortran_specific.f90  group.f90  help.f90  ifile.f90  include_guard.cmake  integer_arrays.f90  io.f90  keyword.f90  kpoints.f90  linear_algebra.f90  link_pfunit.cmake  logic.f90  moller_plesset.f90  normal_mode.f90  ofile.f90  phase.f90  qpoints.f90  (+14 more)
(+848 files in other folders)
